2002-10-24  Daniel Elstner  <daniel.elstner@gmx.net>

	* macros/cxx.m4: New file, implementing custom autoconf macros
	related to checking the C++ compiler/environment.
	(REGEXXER_CXX_HAS_STD_LOCALE): New m4 macro.
	(REGEXXER_ARG_ENABLE_WARNINGS): New m4 macro.

	* configure.ac: Make use of the new autoconf macros.
	* Makefile.am (EXTRA_DIST): Add macros/cxx.m4.

2002-10-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac: Require gtkmm-2.0 >= 2.0.0.

2002-10-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/fileio.cc: Dump std::[io]fstream in favor of Glib::IOChannel.
	It's less code now and the error reporting should be better too.

2002-10-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/fileio.{cc,h}: New files.
	* src/filelist.{cc,h}: Separate the load/save functionality into
	fileio.{cc,h} to improve modularity of the code.

2002-10-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.{cc,h} (FileList::find_recursively): Move the
	file_test() code into a separate method find_check_file(), and
	improve the error handling.

2002-10-21  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.{cc,h}: Cache the Gdk::Color object used for
	files which failed to load.

	* src/mainwindow.cc: Replace some unnecessary run-time checked
	casts with static ones.

2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (MainWindow::on_filelist_bound_state_changed):
	Don't forget to update the prev/next match buttons' sensitivity.

2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.cc (FileList::find_files): Catch exceptions from
	Glib::Dir and Glib::file_test().

2002-10-20  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/stringutils.{cc,h} (Util::convert_to_ascii): New function
	which replaces all non-ASCII characters with '?'.  This should be
	used for error messages when everything else failed.

	* src/filelist.cc: Use filename_to_utf8_fallback() in a few more